implement form validation

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,7 +7,7 @@
   --font-dark: #441752;
   --font-light: #f5efff;
   --font--error: #d32f2f;
-  --font--success: #7ed321;
+  --font--success: #487816;
   --background-hover: #e0e6ed; /* Hover state color */
   --background-error: #e94b35; /* Error color */
 
